# coding-agent-configs

./: README.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: git-workflow-manager.md
claude-code/plugins/prd/commands/: generate.md
claude-code/skills/modern-python/references/: pyproject.md  ruff.md  uv.md
claude-code/skills/modern-python/templates/: pre-commit-config.yaml  pyproject.toml
mini-codex/: README.md  pyproject.toml
mini-codex/mini_codex/: __init__.py  agent.py  agents.py  cli.py  mcp_client.py  tools.py
plugins/prd/: README.md
plugins/ralph/: README.md
plugins/ralph/.claude-plugin/: plugin.json
plugins/ralph/commands/: help.md
plugins/ralph/hooks/: stop-hook.sh
plugins/ralph/scripts/: setup-ralph-loop.sh
rune/: .gitignore  README.md  main.py  pyproject.toml
rune/rune/: __init__.py  agent.py  agents.py  cli.py  mcp_client.py  tools.py
rune/rune/harness/: session.py
skills/modern-python/: SKILL.md
skills/modern-python/references/: testing.md
