[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-codex"
version = "0.2.0"
description = "A coding agent harness inspired by OpenCode — with 15 tools, MCP support, permissions, subagent spawning, and plan/build agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
mini-codex = "mini_codex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
