[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rune"
version = "0.2.0"
description = "A coding agent harness with 15 tools, MCP support, permissions, subagent spawning, and plan/build agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0.0",
    "rich>=14.3.1",
]

[project.scripts]
rune = "rune.cli:main"

[tool.setuptools.packages.find]
where = ["."]
